--- a/package.json
+++ b/package.json
@@ -87,7 +87,6 @@
     "cosmiconfig": "^8.3.6",
     "cosmiconfig-typescript-loader": "^5.0.0",
     "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.0",
     "dotenv": "^16.4.5",
     "execa": "^8.0.1",
     "fast-glob": "^3.3.2",
@@ -112,6 +111,7 @@
     "react-refresh": "^0.14.2",
     "resolve-url-loader": "^5.0.0",
     "rimraf": "^5.0.7",
+    "rspack-manifest-plugin": "^5.0.1",
     "sass": "^1.77.5",
     "sass-loader": "^14.2.1",
     "semver": "^7.6.2",
@@ -124,10 +124,7 @@
     "ts-node": "10.9.2",
     "tslib": "^2.6.2",
     "typescript": "~5.5.2",
-    "webpack": "^5.92.0",
-    "webpack-assets-manifest": "^5.2.1",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-dev-server": "^5.0.4",
     "webpack-manifest-plugin": "^5.0.0",
     "worker-loader": "^3.0.8",
     "yargs": "^17.7.2"
@@ -138,6 +135,9 @@
     "@gravity-ui/eslint-config": "^3.2.0",
     "@gravity-ui/prettier-config": "^1.1.0",
     "@gravity-ui/tsconfig": "^1.0.0",
+    "@rspack/cli": "^1.0.10",
+    "@rspack/core": "^1.0.10",
+    "@rspack/dev-server": "^1.0.7",
     "@sentry/webpack-plugin": "^2.7.1",
     "@types/babel__helper-plugin-utils": "^7.10.3",
     "@types/circular-dependency-plugin": "^5.0.8",
@@ -157,7 +157,6 @@
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
     "jest": "^29.5.0",
-    "lightningcss": "^1.21.5",
     "monaco-editor-webpack-plugin": "^6.0.0",
     "nano-staged": "^0.8.0",
     "npm-run-all": "^4.1.5",
@@ -166,7 +165,6 @@
   },
   "peerDependencies": {
     "@sentry/webpack-plugin": "^2.7.1",
-    "lightningcss": "^1.21.5",
     "monaco-editor-webpack-plugin": "*"
   },
   "peerDependenciesMeta": {
